Fixed error logic recommendation